Improvements to index unit tests

--- a/tests/unit/Makefile
+++ b/tests/unit/Makefile
@@ -7,7 +7,7 @@ GTEST_DIR = ../../deps/googletest
 CPPFLAGS += -isystem $(GTEST_DIR)/include
 
 # Flags passed to the C++ compiler.
-CXXFLAGS += -g -Wall -Wextra -pthread
+CXXFLAGS += -g -Wall -Wextra -pthread -std=c++11
 CXX_SUPPRESS = -Wno-sign-compare -Wno-format -Wno-write-strings
 
 # Google Test headers - do not modify
