use generic datablock struct to hold graph entities

--- a/src/Makefile
+++ b/src/Makefile
@@ -42,9 +42,9 @@ CC_SOURCES += $(SOURCEDIR)/parser/grammar.c
 CC_SOURCES += $(wildcard $(SOURCEDIR)/resultset/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/stores/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/util/*.c)
-CC_SOURCES += $(wildcard $(SOURCEDIR)/util/hashmap/*.c)
-CC_SOURCES += $(wildcard $(SOURCEDIR)/index/*.c)
+CC_SOURCES += $(wildcard $(SOURCEDIR)/util/datablock/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/util/thpool/*.c)
+CC_SOURCES += $(wildcard $(SOURCEDIR)/index/*.c)
 
 # Convert all sources to .o files
 CC_OBJECTS = $(patsubst %.c, %.o, $(CC_SOURCES) )
