--- a/tests/Makefile
+++ b/tests/Makefile
@@ -8,5 +8,8 @@ test:
 	# Cypher Technology Compatibility Kit (TCK)
 	# $(MAKE) -C tck
 
+test_valgrind:
+	$(MAKE) -C unit test_valgrind
+
 clean:
 	find . -name '*.[oad]' -type f -delete
