Add GraphBLAS Makefile target for static compilation only

--- a/deps/GraphBLAS/Makefile
+++ b/deps/GraphBLAS/Makefile
@@ -21,6 +21,9 @@ library:
 # the same as "make library"
 static: library
 
+static_only:
+	( cd build ; cmake $(CMAKE_OPTIONS) .. ; $(MAKE) graphblas_static )
+
 # installs GraphBLAS to the install location defined by cmake, usually
 # /usr/local/lib and /usr/local/include
 install:
