Add GraphBLAS Makefile target for static compilation only (#160)

--- a/src/Makefile
+++ b/src/Makefile
@@ -84,7 +84,7 @@ $(LIBTRIEMAP):
 .PHONY: $(LIBTRIEMAP)
 
 $(GRAPHBLAS):
-	$(MAKE) CMAKE_OPTIONS="-DCMAKE_CXX_FLAGS=-std=c++11" library -C ../deps/GraphBLAS
+	$(MAKE) CMAKE_OPTIONS="-DCMAKE_CXX_FLAGS=-std=c++11" static_only -C ../deps/GraphBLAS
 
 .PHONY: $(GRAPHBLAS)
 
