--- a/src/Makefile
+++ b/src/Makefile
@@ -14,10 +14,20 @@ CFLAGS += $(DEBUGFLAGS)
 
 # Compile flags for linux / osx
 ifeq ($(uname_S),Linux)
-	SHOBJ_LDFLAGS ?= -shared -Bsymbolic -Bsymbolic-functions -ldl -lpthread
+	SHOBJ_LDFLAGS ?= -shared -Bsymbolic -Bsymbolic-functions -fopenmp -ldl -lpthread
 else
-	CFLAGS += -mmacosx-version-min=10.12
-	SHOBJ_LDFLAGS ?= -macosx_version_min 10.12 -exported_symbol _RedisModule_OnLoad -bundle -undefined dynamic_lookup -ldl -lpthread
+	CFLAGS += -mmacosx-version-min=10.12 -Xpreprocessor -fopenmp
+	SHOBJ_LDFLAGS ?= -mmacosx-version-min=10.12 -bundle -undefined dynamic_lookup -lomp -ldl -lpthread
+
+	# If we are using the Apple toolchain compiler, some extra work is required to validate dependencies.
+	compiler := $(findstring Apple LLVM,$(shell sh -c '$(CC) --version'))
+	ifneq (,$(compiler))
+	# Verify that the user has separately installed the OpenMP dependency.
+		openmp_support := $(shell sh -c 'brew ls --versions libomp || echo no_openmp')
+		ifeq ($(openmp_support), no_openmp)
+      $(error "Error: OpenMP is required for compilation. Install by running 'brew install libomp'.")
+		endif
+	endif
 endif
 SHOBJ_LDFLAGS += $(LDFLAGS)
 
@@ -96,7 +106,7 @@ parser:
 
 # Build the module...
 redisgraph.so: $(MODULE)
-	$(LD) -o $@ $(MODULE) $(SHOBJ_LDFLAGS) -lc -lm
+	$(CC) -o $@ $(MODULE) $(SHOBJ_LDFLAGS) -lc -lm
 
 clean:
 	find . -name '*.[oad]' -type f -delete
