Build GraphBLAS with 4 jobs by default

--- a/deps/GraphBLAS/Makefile
+++ b/deps/GraphBLAS/Makefile
@@ -22,7 +22,7 @@ library:
 static: library
 
 static_only:
-	( cd build ; cmake $(CMAKE_OPTIONS) .. ; $(MAKE) graphblas_static )
+	( cd build ; cmake $(CMAKE_OPTIONS) .. ; $(MAKE) -j4 graphblas_static )
 
 # installs GraphBLAS to the install location defined by cmake, usually
 # /usr/local/lib and /usr/local/include
