Graph context without thread-private data (#151)
* Rudimentary GraphContext struct and handling

* GraphContext handles index access

* Keep allstores in GraphContext

* Begin migrating label retrievals

* Cache label stores in GraphContext

* Remove StoreHandle struct

* Better label store caching

* Update relation store accesses to use GraphContext

* Standardize GraphContext key retrieval

* Refactor signatures to expect GraphContext arguments

* argv and argc are last arguments to bulk insert functions

* PR updates

* GraphContext manages Graph_AddLabel and Graph_AddRelationType

* WIP Move label store ownership to GraphContext

* Fixes for graph construction

* Update index interface and serialization

* WIP

* Drop indices properly

* Improve resultset statistics calls

* Don't store module ctx in GraphContext

* Improve GraphContext serialization

* Add subdirectory for serializers

* WIP Unify serialization into single key

* Scope locks to individual dbs

* User-provided graph name is used as Redis key, more respect for in-use keys

* Improve graph delete operation

* Delete unused and clarify function purposes

* Improve interfaces, better frees

* PR updates

* Return to building indices from Graph

* Remove underscore from BulkInsert family of functions

* PR updates

* Deserialize label store properties in one call

--- a/src/Makefile
+++ b/src/Makefile
@@ -43,6 +43,8 @@ CC_SOURCES += $(wildcard $(SOURCEDIR)/execution_plan/ops/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/execution_plan/optimizations/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/filter_tree/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/graph/*.c)
+CC_SOURCES += $(wildcard $(SOURCEDIR)/graph/entities/*.c)
+CC_SOURCES += $(wildcard $(SOURCEDIR)/graph/serializers/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/grouping/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/hexastore/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/parser/clauses/*.c)
