List Markdown extension features in separate lines

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,5 +32,7 @@ pages:
 
 markdown_extensions:
   - admonition
-  - codehilite(guess_lang=false)
-  - toc(permalink=true)
+  - codehilite:
+      guess_lang: False
+  - toc:
+      permalink: True
