--- a/tests/Makefile
+++ b/tests/Makefile
@@ -3,7 +3,9 @@ test:
 	$(MAKE) -C unit all
 
 	# flow tests
-	python -m unittest discover --verbose
+	# python -m unittest discover --verbose
+	# TODO only running relevant file
+	python -m unittest discover --verbose -p test_traversals.py
 	
 	# Cypher Technology Compatibility Kit (TCK)
 	$(MAKE) -C tck
