--- a/src/Makefile
+++ b/src/Makefile
@@ -42,6 +42,7 @@ CC_SOURCES += $(wildcard $(SOURCEDIR)/grouping/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/hexastore/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/parser/clauses/*.c)
 CC_SOURCES += $(SOURCEDIR)/parser/ast.c
+CC_SOURCES += $(SOURCEDIR)/parser/newast.c
 CC_SOURCES += $(SOURCEDIR)/parser/ast_common.c
 CC_SOURCES += $(SOURCEDIR)/parser/ast_arithmetic_expression.c
 CC_SOURCES += $(SOURCEDIR)/parser/lex.yy.c
