Fixed to test suite
Fixes to test suite:
- Fixed make clean,
- Unified disposableredis.py files,
- Introduced REDIS_SERVER environment variable into disposableredis.py,
- tck tests now teardown redis server properly,
- Introduced verbose mode in make (V=1),
- Minor fixes to Makefiles.

Added common requirements.txt file for tests,
Added Pipenv files (Pipfile, Pipfile.lock) for installing Python packages.

Added setup files for installing required packages for build and tests.

--- a/src/Makefile
+++ b/src/Makefile
@@ -95,7 +95,6 @@ all: redisgraph.so
 
 $(LIBTRIEMAP):
 	$(MAKE) -C util/triemap
-.PHONY: $(LIBTRIEMAP)
 
 BLAS_CFLAGS = -fPIC -I $(abs_path)/util -include rmalloc.h -DREDIS_MODULE_TARGET -DGB_MALLOC=rm_malloc -DGB_CALLOC=rm_calloc -DGB_REALLOC=rm_realloc -DGB_FREE=rm_free -DGBCOMPACT
 
@@ -103,8 +102,9 @@ BLAS_CFLAGS = -fPIC -I $(abs_path)/util -include rmalloc.h -DREDIS_MODULE_TARGET
 $(GRAPHBLAS):
 ifeq (,$(wildcard $(GRAPHBLAS)))
 	$(MAKE) CMAKE_OPTIONS="-DUSER_POSIX=1 -DCMAKE_CXX_FLAGS=-std=c++11 -DCMAKE_C_FLAGS='$(BLAS_CFLAGS)'" static_only -C ../deps/GraphBLAS
+else
+
 endif
-.PHONY: $(GRAPHBLAS)
 
 # Compile query parse. 
 # This is not included in the usual make target!
@@ -117,17 +117,22 @@ redisgraph.so: $(MODULE)
 	$(REDISGRAPH_CC) -o $@ $(MODULE) $(SHOBJ_LDFLAGS) -lc -lm
 
 clean:
-	find . -name '*.[oad]' -type f -delete
-	$(MAKE) -C ../tests clean
+	@find . -name '*.[oad]' -type f -delete
+	@-rm -f redisgraph.so
+	@if [ "$(ALL)" = "1" ]; then \
+		cd ../deps/GraphBLAS/build ; \
+		find . \( ! -iname .gitignore \) -delete ; \
+		rm -f ../Config/GraphBLAS.h.tmp ; \
+	fi
+	@$(MAKE) -C ../tests clean
 
 package: redisgraph.so
-	mkdir -p ../build
-	ramp pack -m "`pwd`/../ramp_manifest.yml" -v -o "../build/redisgraph.{os}-{architecture}.latest.zip" "`pwd`/redisgraph.so"
+	@mkdir -p ../build
+	@ramp pack -m "`pwd`/../ramp_manifest.yml" -v -o "../build/redisgraph.{os}-{architecture}.latest.zip" "`pwd`/redisgraph.so"
 
 test: redisgraph.so
-	# unit tests
-	$(MAKE) -C ../tests test
+	@$(MAKE) -C ../tests test
 
 test_valgrind: redisgraph.so
 	# Run unit tests under Valgrind
-	$(MAKE) -C ../tests test_valgrind
+	@$(MAKE) -C ../tests test_valgrind
