--- a/tests/tck/Makefile
+++ b/tests/tck/Makefile
@@ -1,3 +1,7 @@
+# Cypher Technology Compatibility Kit (TCK)
 test:
-	# Cypher Technology Compatibility Kit (TCK)
-	behave --tags=-skip
+ifeq ($(V),)
+	@behave --tags=-skip --format progress
+else
+	@behave --tags=-skip
+endif
