--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,15 +1,23 @@
-test:
-	# unit tests
+
+.PHONY: test unit flow tck test_valgrind clean
+
+test: unit flow tck
+
+# unit tests
+unit:
 	$(MAKE) -C unit all
 
-	# flow tests
+# flow tests
+flow:
 	python -m unittest discover --verbose
-	
-	# Cypher Technology Compatibility Kit (TCK)
+
+# Cypher Technology Compatibility Kit (TCK)
+tck:
 	$(MAKE) -C tck
 
 test_valgrind:
 	$(MAKE) -C unit test_valgrind
 
 clean:
-	find . -name '*.[oad]' -type f -delete
+	@find . -name '*.[oad]' -type f -delete
+	@find . -name '*.run' -type f -delete
