tests: changes from review

--- a/src/Makefile
+++ b/src/Makefile
@@ -94,14 +94,14 @@ all: redisgraph.so
 -include $(CC_DEPS)
 
 $(LIBTRIEMAP):
-	$(MAKE) -C util/triemap
+	@$(MAKE) -C util/triemap
 
 BLAS_CFLAGS = -fPIC -I $(abs_path)/util -include rmalloc.h -DREDIS_MODULE_TARGET -DGB_MALLOC=rm_malloc -DGB_CALLOC=rm_calloc -DGB_REALLOC=rm_realloc -DGB_FREE=rm_free -DGBCOMPACT
 
 # Build GraphBLAS only if library does not already exists.
 $(GRAPHBLAS):
 ifeq (,$(wildcard $(GRAPHBLAS)))
-	$(MAKE) CMAKE_OPTIONS="-DUSER_POSIX=1 -DCMAKE_CXX_FLAGS=-std=c++11 -DCMAKE_C_FLAGS='$(BLAS_CFLAGS)'" static_only -C ../deps/GraphBLAS
+	@$(MAKE) -C ../deps/GraphBLAS CMAKE_OPTIONS="-DUSER_POSIX=1 -DCMAKE_CXX_FLAGS=-std=c++11 -DCMAKE_C_FLAGS='$(BLAS_CFLAGS)'" static_only
 else
 
 endif
@@ -109,21 +109,19 @@ endif
 # Compile query parse. 
 # This is not included in the usual make target!
 parser:
-	$(MAKE) -C $@
+	@$(MAKE) -C $@
 .PHONY: parser
 
 # Build the module...
 redisgraph.so: $(MODULE)
-	$(REDISGRAPH_CC) -o $@ $(MODULE) $(SHOBJ_LDFLAGS) -lc -lm
+	@$(REDISGRAPH_CC) -o $@ $(MODULE) $(SHOBJ_LDFLAGS) -lc -lm
 
 clean:
 	@find . -name '*.[oad]' -type f -delete
 	@-rm -f redisgraph.so
-	@if [ "$(ALL)" = "1" ]; then \
-		cd ../deps/GraphBLAS/build ; \
-		find . \( ! -iname .gitignore \) -delete ; \
-		rm -f ../Config/GraphBLAS.h.tmp ; \
-	fi
+ifeq ($(ALL),1)
+	@$(MAKE) -C ../deps/GraphBLAS clean
+endif
 	@$(MAKE) -C ../tests clean
 
 package: redisgraph.so
