--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,6 +29,7 @@ pages:
     - 'Design': design.md
     - 'Contributor agreement': contrib.md
     - 'Cypher coverage': cypher_support.md
+    - 'Known limitations': known_limitations.md
 
 markdown_extensions:
   - admonition
