--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,8 @@ jobs:
       - run:
           name: Install prerequisite
           command: >-
-            pip install redisgraph behave backports.csv &&
+            pip install git+https://github.com/RedisGraph/redisgraph-py.git@new-resultset-struct &&
+            pip install behave backports.csv &&
             apt-get update; apt-get install -y cmake
       - run:
           name: Build
