WIP remove anon identifiers

--- a/src/Makefile
+++ b/src/Makefile
@@ -117,7 +117,7 @@ ifeq (,$(wildcard $(LIBCYPHER-PARSER)))
 	cd ../deps/libcypher-parser; \
 	./autogen.sh; \
 	./configure --disable-shared;
-	$(MAKE) CFLAGS="-fPIC" clean check -C ../deps/libcypher-parser
+	$(MAKE) CFLAGS="-g -fPIC" clean check -C ../deps/libcypher-parser
 endif
 .PHONY: $(LIBCYPHER-PARSER)
 
