--- a/src/Makefile
+++ b/src/Makefile
@@ -46,9 +46,7 @@ CC_SOURCES += $(wildcard $(SOURCEDIR)/graph/serializers/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/GraphBLASExt/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/grouping/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/index/*.c)
-CC_SOURCES += $(wildcard $(SOURCEDIR)/parser/clauses/*.c)
-CC_SOURCES += $(SOURCEDIR)/parser/newast.c
-CC_SOURCES += $(SOURCEDIR)/parser/newast_validations.c
+CC_SOURCES += $(wildcard $(SOURCEDIR)/parser/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/resultset/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/schema/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/util/*.c)
