clearer version of connected components

--- a/src/Makefile
+++ b/src/Makefile
@@ -67,6 +67,8 @@ export CC_OBJECTS
 # will also change the dependent .c files of it
 CC_DEPS = $(patsubst %.c, %.d, $(CC_SOURCES) )
 
+RAX=../deps/rax/rax.o
+
 # Library dependencies
 LIBTRIEMAP=util/triemap/libtriemap.a
 GRAPHBLAS=../deps/GraphBLAS/build/libgraphblas.a
@@ -75,7 +77,7 @@ LIBCYPHER-PARSER=../deps/libcypher-parser/lib/src/.libs/libcypher-parser.a
 
 # Compilation deps for the module
 LIBS=$(LIBTRIEMAP) $(GRAPHBLAS) $(LIBXXHASH) $(LIBCYPHER-PARSER)
-MODULE=$(LIBS) $(CC_OBJECTS)
+MODULE=$(CC_OBJECTS) $(RAX) $(LIBS)
 
 REDISGRAPH_CC=$(QUIET_CC)$(CC)
 
@@ -98,6 +100,9 @@ all: redisgraph.so
 
 # Include all dependency files for C files
 -include $(CC_DEPS)
+
+$(RAX):
+	@$(MAKE) -C ../deps/rax/ rax.o
 
 $(LIBXXHASH):
 	@$(MAKE) -C ../deps/xxhash lib
@@ -142,6 +147,7 @@ clean:
 ifeq ($(ALL),1)
 	@$(MAKE) -C ../deps/GraphBLAS clean
 	@$(MAKE) -C ../deps/xxhash clean
+	@$(MAKE) -C ../deps/rax clean
 endif
 	@$(MAKE) -C ../tests clean
 
